--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>NgTodo</title>
-    <base href="/">
+    <title>Boodschappen App</title>
+    <base href="/Boodschappen/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="mat-app-background">
+<body>
     <app-root></app-root>
 </body>
 
